--- a/HumanAnatomy/index.html
+++ b/HumanAnatomy/index.html
@@ -16,10 +16,11 @@
             <legend>Physical Layers</legend>
             <label><input type="checkbox" id="toggle-skeleton" checked> Skeletal System</label>
             <label><input type="checkbox" id="toggle-ligaments"> Ligaments</label>
+            <label><input type="checkbox" id="toggle-tendons"> Tendons</label>
             <label><input type="checkbox" id="toggle-organs" checked> Organ Systems</label>
-            <div id="reproductive-controls" style="margin-left: 20px; display: none;">
+            <div id="reproductive-controls" style="margin-left: 10px; display: none;">
                 <label><input type="checkbox" id="toggle-reproductive"> Reproductive (Sub-layer)</label>
-                <div id="gender-selector" style="margin-left: 20px; display: none;">
+                <div id="gender-selector" style="margin-left: 10px; display: none;">
                     <label><input type="radio" name="gender" value="male" checked> Male</label>
                     <label><input type="radio" name="gender" value="female"> Female</label>
                 </div>
@@ -27,7 +28,7 @@
             <label><input type="checkbox" id="toggle-circulatory"> Arteries & Veins</label>
             <label><input type="checkbox" id="toggle-lymphatic"> Lymphatic System</label>
             <label><input type="checkbox" id="toggle-integumentary"> Integumentary (Skin/Hair)</label>
-            <label><input type="checkbox" id="toggle-muscle" disabled> Muscular System</label>
+            <label><input type="checkbox" id="toggle-muscle"> Muscular System</label>
         </fieldset>
 
         <!-- Esoteric Layers (Collapsible) -->
@@ -57,6 +58,21 @@
                 <div class="sub-layer-content">
                     <label><input type="checkbox" id="toggle-sephirot"> Sephirot Tree (10+22)</label>
                     <label><input type="checkbox" id="toggle-koshas"> Koshas (5)</label>
+                    <label><input type="checkbox" id="toggle-egyptian"> Egyptian Soul (9 Layers)</label>
+                </div>
+            </details>
+
+            <details class="sub-layer">
+                <summary>Consciousness (8 Circuits)</summary>
+                <div class="sub-layer-content">
+                    <label><input type="checkbox" id="toggle-8circuits"> 8-Circuit Model (Leary/Wilson)</label>
+                </div>
+            </details>
+
+            <details class="sub-layer">
+                <summary>Sufi / Islamic Latifas</summary>
+                <div class="sub-layer-content">
+                    <label><input type="checkbox" id="toggle-islamic-latifas"> Islamic Latifas (Amr & Khalq)</label>
                 </div>
             </details>
         </details>
@@ -87,6 +103,10 @@
                 <span id="stat-ligaments" class="stat-value">0</span>
             </div>
             <div class="stat-row">
+                <span class="stat-label">Tendons:</span>
+                <span id="stat-tendons" class="stat-value">0</span>
+            </div>
+            <div class="stat-row">
                 <span class="stat-label">Vessels:</span>
                 <span id="stat-vessels" class="stat-value">0</span>
             </div>
@@ -104,8 +124,28 @@
                 <span id="stat-marmas" class="stat-value">0</span>
             </div>
             <div class="stat-row">
+                <span class="stat-label">Meridians:</span>
+                <span id="stat-meridians" class="stat-value">0</span>
+            </div>
+            <div class="stat-row">
                 <span class="stat-label">Sephirot:</span>
                 <span id="stat-sephirot" class="stat-value">0</span>
+            </div>
+            <div class="stat-row">
+                <span class="stat-label">Dantians:</span>
+                <span id="stat-dantians" class="stat-value">0</span>
+            </div>
+            <div class="stat-row">
+                <span class="stat-label">Koshas:</span>
+                <span id="stat-koshas" class="stat-value">0</span>
+            </div>
+            <div class="stat-row">
+                <span class="stat-label">Soul Parts:</span>
+                <span id="stat-egyptian" class="stat-value">0</span>
+            </div>
+            <div class="stat-row">
+                <span class="stat-label">Circuits:</span>
+                <span id="stat-circuits" class="stat-value">0</span>
             </div>
         </div>
         <div id="info-panel">
@@ -157,10 +197,51 @@
                         cursor: pointer;
                         filter: brightness(1.5);
                     }
+
+                    .dantian-node:hover {
+                        cursor: pointer;
+                        filter: brightness(1.3);
+                        stroke: white;
+                        stroke-width: 2px;
+                    }
+
+                    .nadi:hover {
+                        cursor: pointer;
+                        filter: brightness(1.5);
+                        stroke-width: 6px;
+                    }
                 </style>
+
+                <!-- Volumetric Muscle Belly (Rich Red) -->
+                <linearGradient id="muscle_belly_grad" x1="0%" y1="0%" x2="100%" y2="0%">
+                    <stop offset="0%" style="stop-color:#5a0000;stop-opacity:1" />
+                    <stop offset="40%" style="stop-color:#8b0000;stop-opacity:1" />
+                    <stop offset="50%" style="stop-color:#a52a2a;stop-opacity:1" />
+                    <stop offset="60%" style="stop-color:#8b0000;stop-opacity:1" />
+                    <stop offset="100%" style="stop-color:#4a0000;stop-opacity:1" />
+                </linearGradient>
+
+                <!-- Pearly Tendon (White to Silver) -->
+                <linearGradient id="tendon_grad" x1="0%" y1="0%" x2="100%" y2="100%">
+                    <stop offset="0%" style="stop-color:#ffffff;stop-opacity:1" />
+                    <stop offset="50%" style="stop-color:#e0e0e0;stop-opacity:1" />
+                    <stop offset="100%" style="stop-color:#cccccc;stop-opacity:1" />
+                </linearGradient>
+
+                <!-- Translucent Fascia / Aponeurosis -->
+                <radialGradient id="fascia_grad">
+                    <stop offset="0%" style="stop-color:#ffffff;stop-opacity:0.6" />
+                    <stop offset="100%" style="stop-color:#e0e0e0;stop-opacity:0.2" />
+                </radialGradient>
             </defs>
             <g id="layer-koshas" style="display: none;">
                 <g id="group-koshas"></g>
+            </g>
+
+            <g id="layer-egyptian-underlay" style="display: none;">
+                <!-- Egyptian Underlay (Shadow, etc) -->
+                <g id="group-egyptian-shuyet"></g>
+                <g id="group-egyptian-ren"></g>
             </g>
 
             <g id="skeletal-system">
@@ -168,6 +249,9 @@
             </g>
             <g id="ligament-system" style="display: none;">
                 <!-- Ligaments -->
+            </g>
+            <g id="tendon-system" style="display: none;">
+                <g id="group-tendons"><!-- Tendons injected here --></g>
             </g>
             <g id="organ-systems">
                 <!-- Organs -->
@@ -178,6 +262,9 @@
             <g id="lymphatic-system" style="display: none;">
                 <!-- Lymph Nodes and Vessels -->
             </g>
+            <g id="muscular-system" style="display: none;">
+                <!-- Muscles -->
+            </g>
             <g id="integumentary-system" style="display: none;">
                 <!-- Skin, Hair, Nails -->
             </g>
@@ -187,15 +274,44 @@
                 <g id="group-marma"></g>
             </g>
 
-            <!-- Energy Body Layers (Central) -->
-            <g id="layer-central-axis" style="display: none;">
-                <g id="group-chakras"></g>
-                <g id="group-dantians"></g>
-                <g id="group-sushumna"></g>
+            <g id="layer-8circuits" style="display: none;">
+                <g id="group-8circuits"></g>
             </g>
 
+            <g id="layer-egyptian-overlay" style="display: none;">
+                <!-- Egyptian Overlay - Order: back to front -->
+                <g id="group-egyptian-sah"></g>
+                <g id="group-egyptian-ka"></g>
+                <g id="group-egyptian-ba"></g>
+                <g id="group-egyptian-ib"></g>
+                <g id="group-egyptian-sekhem"></g>
+                <g id="group-egyptian-akh"></g><!-- TOPMOST -->
+            </g>
+
+            <!-- Energy Body Layers (Central) - MOVED TO TOP -->
+            <g id="layer-central-axis" style="display: none;">
+                <g id="group-sushumna"></g>
+                <g id="group-chakras"></g>
+                <g id="group-dantians"></g>
+            </g>
+
+            <!-- Archetypal Structure - MOVED TO TOP -->
             <g id="layer-archetypal" style="display: none;">
                 <g id="group-sephirot"></g>
+            </g>
+
+            <!-- Islamic Latifas Layer - MOVED TO TOP -->
+            <g id="layer-islamic-latifas" style="display: none;">
+                <defs id="latifa-defs-container"></defs>
+                <!-- Alam-i Khalq (Elements) Underlay/Overlay -->
+                <g id="group-latifas-khalq-earth"></g>
+                <g id="group-latifas-khalq-water"></g>
+                <g id="group-latifas-khalq-fire"></g>
+                <g id="group-latifas-khalq-air"></g>
+
+                <!-- Alam-i Amr (Points) -->
+                <g id="group-latifas-amr"></g>
+                <g id="group-latifas-khalq-nafs"></g>
             </g>
         </svg>
     </div>
